kubernetes/testnet/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: casperdata-tls-testnet
spec:
  entryPoints:
    - secure
  routes:
    - match: Host(`data.testnet.casperholders.com`)
      kind: Rule
      services:
        - name: casperdata-service-testnet
          port: 80
  tls:
    secretName: casperdata-cert-testnet
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: casperdata-http-testnet
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`data.testnet.casperholders.com`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: casperdata-service-testnet
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: casperbackup-tls-testnet
spec:
  entryPoints:
    - secure
  routes:
    - match: Host(`backup.testnet.casperholders.io`)
      kind: Rule
      services:
        - name: casperbackup-service-testnet
          port: 80
  tls:
    secretName: casperbackup-cert-testnet
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: casperbackup-http-testnet
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`backup.testnet.casperholders.io`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: casperbackup-service-testnet
          port: 80
